SCANJLIB-216 Rework loading of env variables